reverted to prvious version without virtual info